--- a/src/app/css/intro.component.css
+++ b/src/app/css/intro.component.css
@@ -112,9 +112,6 @@ p {
   .container {
     gap: 2vh;
   }
-  .body {
-    height: 70vh;
-  }
 }
 
 @media screen and (max-width: 375px) {
